; ModuleID = '/home/carl/AnghaBench/h2o/lib/extr_http1.c_on_send_complete.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/extr_http1.c_on_send_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_16__ = type { %struct.st_h2o_http1_conn_t* }
%struct.st_h2o_http1_conn_t = type { %struct.TYPE_11__, %struct.TYPE_15__, i32, %struct.TYPE_14__ }
%struct.TYPE_11__ = type { i32*, i64, i64, %struct.TYPE_12__, i32* }
%struct.TYPE_12__ = type { i32 }
%struct.TYPE_15__ = type { i32, i32*, i32 }
%struct.TYPE_14__ = type { %struct.TYPE_13__* }
%struct.TYPE_13__ = type { i32 }
%struct.TYPE_17__ = type { i64 }

@.str = private unnamed_addr constant [16 x i8] c"server-timing: \00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"\0D\0A\0D\0A\00", align 1
@on_send_complete_post_trailers = common dso_local global i32 0, align 4
@OSTREAM_STATE_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_16__*, i8*)* @on_send_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_send_complete(%struct.TYPE_16__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_16__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.st_h2o_http1_conn_t*, align 8
  %6 = alloca %struct.TYPE_17__, align 8
  %7 = alloca %struct.TYPE_17__, align 8
  %8 = alloca %struct.TYPE_17__, align 8
  store %struct.TYPE_16__* %0, %struct.TYPE_16__** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load %struct.TYPE_16__*, %struct.TYPE_16__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %9, i32 0, i32 0
  %11 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %10, align 8
  store %struct.st_h2o_http1_conn_t* %11, %struct.st_h2o_http1_conn_t** %5, align 8
  %12 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %13 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %13, i32 0, i32 4
  %15 = load i32*, i32** %14, align 8
  %16 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %17 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %17, i32 0, i32 2
  %19 = icmp eq i32* %15, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  %22 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %23 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %22, i32 0, i32 3
  %24 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_13__*, %struct.TYPE_13__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @h2o_gettimeofday(i32 %27)
  %29 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %30 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %30, i32 0, i32 3
  %32 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %31, i32 0, i32 0
  store i32 %28, i32* %32, align 8
  %33 = load i8*, i8** %4, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %35, label %39

35:                                               ; preds = %2
  %36 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %37 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %37, i32 0, i32 2
  store i64 0, i64* %38, align 8
  br label %39

39:                                               ; preds = %35, %2
  %40 = load i8*, i8** %4, align 8
  %41 = icmp eq i8* %40, null
  br i1 %41, label %42, label %75

42:                                               ; preds = %39
  %43 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %44 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %44, i32 0, i32 1
  %46 = load i64, i64* %45, align 8
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %75

48:                                               ; preds = %42
  %49 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %50 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %49, i32 0, i32 1
  %51 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %50, i32 0, i32 1
  %52 = load i32*, i32** %51, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %54, label %75

54:                                               ; preds = %48
  %55 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %56 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %55, i32 0, i32 0
  %57 = call i32 @H2O_STRLIT(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %58 = call i32 @H2O_STRLIT(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %59 = call i64 @h2o_build_server_timing_trailer(%struct.TYPE_11__* %56, i32 %57, i32 %58)
  %60 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %8, i32 0, i32 0
  store i64 %59, i64* %60, align 8
  %61 = bitcast %struct.TYPE_17__* %6 to i8*
  %62 = bitcast %struct.TYPE_17__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %61, i8* align 8 %62, i64 8, i1 false)
  %63 = bitcast %struct.TYPE_17__* %7 to i8*
  %64 = bitcast %struct.TYPE_17__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %63, i8* align 8 %64, i64 8, i1 false)
  %65 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %7, i32 0, i32 0
  %66 = load i64, i64* %65, align 8
  %67 = icmp ne i64 %66, 0
  br i1 %67, label %68, label %74

68:                                               ; preds = %54
  %69 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %70 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %69, i32 0, i32 2
  %71 = load i32, i32* %70, align 8
  %72 = load i32, i32* @on_send_complete_post_trailers, align 4
  %73 = call i32 @h2o_socket_write(i32 %71, %struct.TYPE_17__* %6, i32 1, i32 %72)
  br label %88

74:                                               ; preds = %54
  br label %75

75:                                               ; preds = %74, %48, %42, %39
  %76 = load i32, i32* @OSTREAM_STATE_DONE, align 4
  %77 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %78 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %77, i32 0, i32 1
  %79 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %78, i32 0, i32 0
  store i32 %76, i32* %79, align 8
  %80 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %81 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %80, i32 0, i32 0
  %82 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %81, i32 0, i32 0
  %83 = load i32*, i32** %82, align 8
  %84 = icmp eq i32* %83, null
  br i1 %84, label %85, label %88

85:                                               ; preds = %75
  %86 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %87 = call i32 @cleanup_connection(%struct.st_h2o_http1_conn_t* %86)
  br label %88

88:                                               ; preds = %68, %85, %75
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @h2o_gettimeofday(i32) #1

declare dso_local i64 @h2o_build_server_timing_trailer(%struct.TYPE_11__*, i32, i32) #1

declare dso_local i32 @H2O_STRLIT(i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @h2o_socket_write(i32, %struct.TYPE_17__*, i32, i32) #1

declare dso_local i32 @cleanup_connection(%struct.st_h2o_http1_conn_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
